create session sample

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
     <p><a href="/list/">list</a></p>
     <p><a href="/xls/mayun1/">Excel格式下载1</a></p>
     <p><a href="/xls/mayun2/">Excel格式下载2</a></p>
+    <p><a href="/loginUI/">登陆页面</a></p>
 
 </body>
 </html>
