--- a/templates/index.html
+++ b/templates/index.html
@@ -18,5 +18,11 @@
     <p><a href="/xls/mayun2/">Excel格式下载2</a></p>
     <p><a href="/loginUI/">登陆页面</a></p>
 
+    <p><a href="/sql/insert">insert</a></p>
+    <p><a href="/sql/delete">delete</a></p>
+    <p><a href="/sql/update">update</a></p>
+    <p><a href="/sql/find?name=lifei">find</a></p>
+
+
 </body>
 </html>
